styles/_profile.scss
// New Profile
.web3-profile {
  padding: 2rem;

  @media screen and (max-width: $size-md) {
    padding: .5rem;
  }

  .web3bio-custom {
    background-color: $light-color;
    background-size: cover;
    display: block;
    height: 100vh;
    left: 0;
    opacity: .15;
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: -1;

    &::after {
      background: linear-gradient(to bottom, rgba($light-color, .15) 0, $light-color 20rem);
      backdrop-filter: blur(1rem);
      content: "";
      display: block;
      height: 100vh;
      left: 0;
      position: fixed;
      top: 0;
      width: 100vw;
    }
  }
}

.web3-profile-base {
  padding: .5rem .5rem 1rem .5rem;
  position: sticky;
  top: 2rem;

  @media screen and (max-width: $size-sm) {
    padding-top: 1.5rem;
  }

  .profile-avatar {
    align-items: center;
    border-radius: 50%;
    display: flex;
    height: 9rem;
    justify-content: center;
    position: relative;
    width: 9rem;

    .avatar {
      box-shadow: inset 0 0 0 .2rem rgba($light-color, .1), 0 .4rem 1rem rgba(0, 0, 0, .1);
      height: 9rem;
      position: relative;
      width: 9rem;
      object-fit: cover;
    }

    .profile-avatar-badge {
      align-items: center;
      backdrop-filter: blur(.5rem);
      background: rgba($bg-color, .5);
      border: .05rem solid rgba($bg-color, .25);
      border-radius: .8rem;
      bottom: 5%;
      display: flex;
      flex-wrap: nowrap;
      gap: .2rem;
      height: 1.6rem;
      justify-content: center;
      opacity: 0;
      padding: .25rem;
      position: absolute;
      right: 5%;
      text-decoration: none;
      transition: all .2s ease;
      visibility: hidden;
      white-space: nowrap;
      word-break: keep-all;
      width: 1.6rem;
      z-index: 999;
    }

    &:focus,
    &:hover {
      .profile-avatar-badge {
        opacity: 1;
        visibility: visible;
      }
    }

    @media screen and (max-width: $size-md) {
      height: 6rem;
      width: 6rem;

      .avatar,
      .img-responsive {
        height: 6rem;
        width: 6rem;
      }
    }
  }

  .profile-name {
    color: $dark-color;
    font-size: 1.8rem;
    font-weight: 700;
    letter-spacing: -.025em;
    line-height: 1.25;
    margin-bottom: .5rem;
    margin-top: 1rem;
    max-width: 600px;
    word-break: break-word;
  }

  .profile-identity {
    align-items: center;
    color: $gray-color-dark;
    display: flex;
    flex-wrap: wrap;
    font-size: .6rem;
    gap: .2rem;
    line-height: 1rem;
    margin-bottom: 1rem;

    .btn-group {
      gap: .1rem;
    }

    .btn {
      background: rgba($gray-color, .1);

      &:focus,
      &:hover {
        background: rgba($gray-color, .2);
      }
    }

    .menu {
      width: 10rem;
    }
  }

  .profile-badges {
    align-items: center;
    color: $gray-color-dark;
    display: flex;
    flex-wrap: wrap;
    font-size: .6rem;
    gap: .25rem;
    line-height: 1rem;
    margin-bottom: 1rem;
    margin-top: 1rem;

    .platform-badge {
      align-items: center;
      background-color: var(--badge-bg-color, rgba($dark-color, .05));
      border: .05rem solid transparent;
      border-color: var(--badge-bg-color, transparent);
      border-radius: .8rem;
      box-shadow: 0 .05rem .1rem var(--badge-bg-color, rgba($dark-color, .05));
      display: flex;
      height: 1.6rem;
      padding: .25rem;
      text-decoration: none;
      transition: all .2s ease;

      &:focus,
      &:hover {
        box-shadow: 0 .05rem .1rem var(--badge-bg-color, rgba($dark-color, .05)), 0 .05rem .8rem rgba($dark-color, .05);
      }

      &.nextid {
        position: relative;

        .platform-badge-icon {
          width: unset
        }
      }
    }

    .platform-badge-icon {
      align-items: center;
      border-radius: .7rem;
      color: var(--badge-primary-color);
      display: flex;
      flex: 0 0 1.3rem;
      height: 1.3rem;
      justify-content: center;
      padding: .15rem;
      width: 1.3rem;
    }

    .platform-badge-name {
      padding: 0 .3rem 0 .1rem;
    }
  }

  .profile-description {
    display: -webkit-box;
    font-size: .9rem;
    font-weight: 400;
    line-height: 1.5;
    margin-bottom: 1rem;
    max-width: 20rem;
    text-overflow: ellipsis;
    overflow: hidden;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 5;
  }

  .profile-location {
    align-items: center;
    display: flex;
    margin-bottom: .5rem;
  }

  .profile-email {
    align-items: center;
    display: flex;
    margin-bottom: 1rem;

    a {
      border-bottom: .05rem dashed;
      text-decoration: none;

      &:focus,
      &:hover {
        border-bottom: .05rem solid;
      }
    }
  }
}

.web3-section-title {
  font-size: .9rem;
  font-weight: 500;
  margin-top: 1rem;
  padding: 1rem 1.5rem;
}
/* ... */

